# gxy-sketches

./: .env.example  .gitignore  CLASS_MOTIFS.md  COMMON_MODULES.md  DAG_MOTIFS.md  PLAN.md  README.md  pyproject.toml
scripts/: backfill_tool_versions.py  class_motifs.json  classify_and_mine.py  dag_motifs.json  extract_dag_motifs.py  regenerate_all.sh
sketches/amplicon/amplicon-16s-asv-illumina-paired/: SKETCH.md
sketches/amplicon/amplicon-alpha-beta-diversity-qiime2/: SKETCH.md
sketches/amplicon/amplicon-asv-dada2-paired/: SKETCH.md
sketches/amplicon/amplicon-dada2-denoising-paired-qiime2/: SKETCH.md
sketches/amplicon/amplicon-dada2-denoising-single-end-qiime2/: SKETCH.md
sketches/amplicon/amplicon-otu-taxonomic-summary-tables/: SKETCH.md
sketches/amplicon/amplicon-qiime2-phylogeny-rarefaction-taxonomy/: SKETCH.md
sketches/amplicon/amplicon-read-qc-paired-end-mgnify/: SKETCH.md
sketches/amplicon/amplicon-rrna-its-taxonomy-mgnify/: SKETCH.md
sketches/amplicon/amplicon-rrna-taxonomic-classification-silva/: SKETCH.md
sketches/amplicon/crispr-targeted-edit-quantification/: SKETCH.md
sketches/amplicon/its-amplicon-taxonomy-mgnify/: SKETCH.md
sketches/amplicon/mapseq-otu-to-ampvis2-reformat/: SKETCH.md
sketches/amplicon/mgnify-otu-rank-abundance-summary/: SKETCH.md
sketches/amplicon/pox-virus-amplicon-consensus-itr/: SKETCH.md
src/gxy_sketches/: cli.py  schema.py  validate.py
tests/: test_generate.py  test_ingest_iwc.py  test_ingest_nf_core.py  test_schema.py  test_validate.py  test_version_enrichment.py
(+406 files in other folders)
